--- a/app/views/omnicalc_templates/random_results.html.erb
+++ b/app/views/omnicalc_templates/random_results.html.erb
@@ -3,12 +3,12 @@
 <dl>
   <dt>Minimum</dt>
   <dd>
-    <%= @num_user_min_input.round(1) %>
+    <%= @num_user_min_input %>
   </dd>
 
   <dt>Maximum</dt>
   <dd>
-    <%= @num_user_max_input.round(1) %>
+    <%= @num_user_max_input %>
   </dd>
 
   <dt>Random Number</dt>
